--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -1078,6 +1078,7 @@ if (rtc_include_tests) {
     if (is_posix) {
       sources += [
         "openssladapter_unittest.cc",
+        "opensslidentity_unittest.cc",
         "ssladapter_unittest.cc",
         "sslidentity_unittest.cc",
         "sslstreamadapter_unittest.cc",
