Injectable software video codecs in Obj-C.
When injecting video codec factories in the Obj-C SDK, use the new
peer connection API that uses webrtc::Video{De,En}CoderFactory classes
and does not automatically add internal software codecs. Instead the
injected factory can support internal VP8 and VP9 codecs through the
included Obj-C classes RTCVideo{De,En}coderVP{8,9}.

When not explicitly injecting any video codec factory, the old code
path is still used and injects only H264 as an external codec and
the internal codec factory is used.

Bug: webrtc:7925
Change-Id: I657d30dfde71da9c0be341e213ab9f97a04caa58

--- a/examples/BUILD.gn
+++ b/examples/BUILD.gn
@@ -233,6 +233,10 @@ if (is_ios || (is_mac && target_cpu != "x86")) {
       "objc/AppRTCMobile/ARDTURNClient+Internal.h",
       "objc/AppRTCMobile/ARDTURNClient.h",
       "objc/AppRTCMobile/ARDTURNClient.m",
+      "objc/AppRTCMobile/ARDVideoDecoderFactory.h",
+      "objc/AppRTCMobile/ARDVideoDecoderFactory.m",
+      "objc/AppRTCMobile/ARDVideoEncoderFactory.h",
+      "objc/AppRTCMobile/ARDVideoEncoderFactory.m",
       "objc/AppRTCMobile/ARDWebSocketChannel.h",
       "objc/AppRTCMobile/ARDWebSocketChannel.m",
       "objc/AppRTCMobile/RTCIceCandidate+JSON.h",
@@ -252,6 +256,10 @@ if (is_ios || (is_mac && target_cpu != "x86")) {
     if (is_ios) {
       deps += [ ":AppRTCMobile_ios_frameworks" ]
     } else {
+      deps += [
+        "../sdk:vp8_objc",
+        "../sdk:vp9_objc",
+      ]
       public_deps = [
         "../sdk:peerconnection_objc",
       ]
