--- a/common_audio/BUILD.gn
+++ b/common_audio/BUILD.gn
@@ -121,8 +121,8 @@ rtc_source_set("common_audio_c_arm_asm") {
   sources = []
   if (current_cpu == "arm") {
     sources += [
+      "../third_party/external-spl_sqrt_floor/spl_sqrt_floor_arm.S",
       "signal_processing/complex_bit_reverse_arm.S",
-      "signal_processing/spl_sqrt_floor_arm.S",
     ]
 
     if (arm_version >= 7) {
@@ -189,6 +189,7 @@ rtc_source_set("common_audio_c") {
 
   if (current_cpu == "mipsel") {
     sources += [
+      "../third_party/external-spl_sqrt_floor/spl_sqrt_floor_mips.c",
       "signal_processing/complex_bit_reverse_mips.c",
       "signal_processing/complex_fft_mips.c",
       "signal_processing/cross_correlation_mips.c",
@@ -197,7 +198,6 @@ rtc_source_set("common_audio_c") {
       "signal_processing/include/spl_inl_mips.h",
       "signal_processing/min_max_operations_mips.c",
       "signal_processing/resample_by_2_mips.c",
-      "signal_processing/spl_sqrt_floor_mips.c",
     ]
     if (mips_dsp_rev > 0) {
       sources += [ "signal_processing/vector_scaling_operations_mips.c" ]
@@ -208,9 +208,9 @@ rtc_source_set("common_audio_c") {
 
   if (current_cpu != "arm" && current_cpu != "mipsel") {
     sources += [
+      "../third_party/external-spl_sqrt_floor/spl_sqrt_floor.c",
       "signal_processing/complex_bit_reverse.c",
       "signal_processing/filter_ar_fast_q12.c",
-      "signal_processing/spl_sqrt_floor.c",
     ]
   }
 
