Move spl_sqrt_floor implementation out of main webrtc code
The code is under a different license (well, public domain) than the
rest of WebRTC, and needs to move.

Bug: webrtc:8349
Change-Id: I9d0eae6f3ee2d47d9ef15c1f5237b3a7471341dc

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,9 @@
 /mojo
 /out
 /testing
-/third_party
+/third_party/**/*
+!/third_party/external-spl_sqrt_floor
+!/third_party/external-spl_sqrt_floor/*
 /tools
 /tools_webrtc/android/profiling/flamegraph
 /tools_webrtc/android/profiling/simpleperf
