Add more Linux, Android and iOS bot configurations.
This adds the remaining missing bots in tryserver.webrtc.

Bug: chromium:749455
Change-Id: I8a60aac971644154f20e8a133e04637f314f6387
No-Try: True
No-Presubmit: True

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -119,6 +119,12 @@ builder_mixins {
 }
 
 builder_mixins {
+  name: "ios_shared"
+  mixins: "mac_shared"
+  recipe { name: "webrtc/ios" }
+}
+
+builder_mixins {
   name: "win"
   dimensions: "os:Windows"
 }
@@ -183,12 +189,23 @@ buckets {
     builders { mixins: "android_shared" name: "android_rel" }
     builders { mixins: "android"        name: "android_clang_dbg" }
     builders { mixins: "android_arm"    name: "android_arm64_rel" }
+    builders {
+      name: "android_more_configs"
+      recipe { name: "webrtc/more_configs" }
+    }
 
     # IOS
 
+    builders { mixins: "ios_shared" name: "ios_dbg" }
+    builders { mixins: "ios_shared" name: "ios_rel" }
+    builders { mixins: "ios_shared" name: "ios_arm64_dbg" }
+    builders { mixins: "ios_shared" name: "ios_arm64_rel" }
+    builders { mixins: "ios_shared" name: "ios32_sim_ios9_dbg" }
+    builders { mixins: "ios_shared" name: "ios64_sim_ios9_dbg" }
+    builders { mixins: "ios_shared" name: "ios64_sim_ios10_dbg" }
     builders {
       name: "ios_api_framework"
-      dimensions: "os:Mac"
+      mixins: "mac_shared"
       recipe { name: "webrtc/ios_api_framework" }
     }
 
@@ -216,6 +233,14 @@ buckets {
     builders { mixins: "linux" name: "linux_asan" }
     builders { mixins: "linux" name: "linux_ubsan" }
     builders { mixins: "linux" name: "linux_ubsan_vptr" }
+    builders {
+      name: "linux_more_configs"
+      recipe { name: "webrtc/more_configs" }
+    }
+    builders {
+      name: "linux_libfuzzer_rel"
+      recipe { name: "webrtc/libfuzzer" }
+    }
 
     # Mac
 
@@ -225,7 +250,7 @@ buckets {
     builders { mixins: "mac_shared" name: "mac_rel" }
     builders {
       name: "mac_baremetal"
-      mixins: "mac"
+      mixins: "mac_shared"
       mixins: "has_camera"
     }
     builders { mixins: "mac" name: "mac_asan" }
