--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -512,6 +512,58 @@ if (is_ios || is_mac) {
     }
 
     if (rtc_include_tests) {
+      if (is_ios) {
+        rtc_source_set("sdk_unittests_sources") {
+          testonly = true
+          include_dirs = [
+            "objc/Framework/Headers",
+            "objc/Framework/Classes",
+          ]
+          sources = [
+            "objc/Framework/UnitTests/RTCMTLVideoView_xctest.mm",
+          ]
+
+          # RTCMTLVideoView not supported on 32-bit arm
+          if (current_cpu != "arm") {
+            if (current_cpu != "arm64") {
+              # Only include this file on simulator, as it's already
+              # included in device builds.
+              sources += [ "objc/Framework/Classes/Metal/RTCMTLVideoView.m" ]
+              libs = [ "CoreVideo.framework" ]
+            }
+          }
+          deps = [
+            ":common_objc",
+            ":peerconnection_objc",
+            ":peerconnectionfactory_objc",
+            ":videotoolbox_objc",
+            ":videotracksource_objc",
+            "..//system_wrappers:system_wrappers_default",
+            "../media:rtc_media_base",
+            "../modules:module_api",
+            "../rtc_base:rtc_base",
+            "../rtc_base:rtc_base_tests_utils",
+            "../system_wrappers:system_wrappers_default",
+          ]
+          public_deps = [
+            "//build/config/ios:xctest",
+            "//third_party/ocmock",
+          ]
+        }
+
+        rtc_ios_xctest_test("sdk_unittests") {
+          info_plist = "objc/Framework/UnitTests/Info.plist"
+          sources = [
+            "objc/Framework/UnitTests/main.m",
+          ]
+          deps = [
+            ":sdk_unittests_sources",
+          ]
+          ldflags = [ "-all_load" ]
+        }
+      }
+
+      # TODO(denicija): once all tests are migrated to xctest remove this source set.
       rtc_source_set("sdk_unittests_objc") {
         testonly = true
 
@@ -567,18 +619,8 @@ if (is_ios || is_mac) {
 
         if (is_ios) {
           sources += [ "objc/Framework/UnitTests/RTCAudioSessionTest.mm" ]
-
-          # RTCMTLVideoView not supported on 32-bit arm
-          if (current_cpu != "arm") {
-            sources += [ "objc/Framework/UnitTests/RTCMTLVideoViewTests.mm" ]
-            if (current_cpu != "arm64") {
-              # Only include this file on simulator, as it's already
-              # included in device builds.
-              sources += [ "objc/Framework/Classes/Metal/RTCMTLVideoView.m" ]
-              libs = [ "CoreVideo.framework" ]
-            }
-          }
         }
+
         if (!build_with_chromium && is_clang) {
           # Suppress warnings from the Chromium Clang plugin
           # (bugs.webrtc.org/163).
