Move ownership of RtcEventLogOutput to caller of RtcEventLog::StartLogging
Ownership of the RtcEventLogOutput is moved from RtcEventLog itself into whomever is calling RtcEventLog::StartLogging (or further up the call-chain).

Bug:webrtc:8111
Change-Id: I1f32ebb7361c8c1fe2ede9c8863999670593eddd

--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -171,6 +171,7 @@ rtc_static_library("peerconnection") {
     ":rtc_pc_base",
     "..:webrtc_common",
     "../api:call_api",
+    "../api:libjingle_logging_api",
     "../api:optional",
     "../api:rtc_stats_api",
     "../api/video_codecs:video_codecs_api",
