wip: use proto_deps in ana_debug_dump_proto
I will deprecate deps in proto_library for improved build throughput.
We can use link_deps here in GN world, but use proto_deps for
bazel/blaze world.

Bug: chromium:938011
Change-Id: Iafa83000c3f7f9ffdc0c376a2297b4a9380b7594

--- a/modules/audio_coding/BUILD.gn
+++ b/modules/audio_coding/BUILD.gn
@@ -820,9 +820,10 @@ if (rtc_enable_protobuf) {
     sources = [
       "audio_network_adaptor/debug_dump.proto",
     ]
-    deps = [
-      ":ana_config_proto",
-    ]
+
+    # We cannot use link_deps here because of the difference of semantics
+    # between proto_library in GN and Bazel(blaze).
+    proto_deps = [ ":ana_config_proto" ]
     proto_out_dir = "modules/audio_coding/audio_network_adaptor"
   }
   proto_library("ana_config_proto") {
