Add a watchdog timer class
The idea is that a thread can create a WatchdogTimer, and then
periodically poke it; if it fails to do that, this will be discovered,
and we can log a stack trace etc.

Bug: webrtc:10308
Change-Id: Ie0620ce31f619eefa7bc81a284e62ad8575ca7cf

--- a/rtc_base/synchronization/BUILD.gn
+++ b/rtc_base/synchronization/BUILD.gn
@@ -35,3 +35,16 @@ rtc_source_set("rw_lock_wrapper") {
     ]
   }
 }
+
+rtc_source_set("watchdog_timer") {
+  sources = [
+    "watchdog_timer.cc",
+    "watchdog_timer.h",
+  ]
+  deps = [
+    "..:criticalsection",
+    "..:logging",
+    "..:rtc_base_approved",
+    "//third_party/abseil-cpp/absl/base:core_headers",
+  ]
+}
