--- a/video/BUILD.gn
+++ b/video/BUILD.gn
@@ -101,6 +101,7 @@ rtc_static_library("video") {
     "../rtc_base/experiments:alr_experiment",
     "../rtc_base/experiments:quality_scaling_experiment",
     "../rtc_base/experiments:rate_control_settings",
+    "../rtc_base/synchronization:watchdog_timer",
     "../rtc_base/system:fallthrough",
     "../rtc_base/task_utils:repeating_task",
     "../rtc_base/task_utils:to_queued_task",
