--- a/test/scenario/network/BUILD.gn
+++ b/test/scenario/network/BUILD.gn
@@ -26,6 +26,7 @@ rtc_source_set("emulated_network") {
   ]
   deps = [
     "../:column_printer",
+    "../../../api:network_emulation_manager_api",
     "../../../api:simulated_network_api",
     "../../../api/units:data_rate",
     "../../../api/units:data_size",
@@ -49,6 +50,7 @@ rtc_source_set("network_emulation_unittest") {
   ]
   deps = [
     ":emulated_network",
+    "../../../api:network_emulation_manager_api",
     "../../../api:simulated_network_api",
     "../../../call:simulated_network",
     "../../../rtc_base:logging",
@@ -67,6 +69,7 @@ rtc_source_set("network_emulation_pc_unittest") {
     ":emulated_network",
     "../../../api:callfactory_api",
     "../../../api:libjingle_peerconnection_api",
+    "../../../api:network_emulation_manager_api",
     "../../../api:scoped_refptr",
     "../../../api:simulated_network_api",
     "../../../api/audio_codecs:builtin_audio_decoder_factory",
