--- a/test/pc/e2e/BUILD.gn
+++ b/test/pc/e2e/BUILD.gn
@@ -264,7 +264,9 @@ if (rtc_include_tests) {
       ":default_audio_quality_analyzer",
       ":default_video_quality_analyzer",
       "../../../api:callfactory_api",
+      "../../../api:create_network_emulation_manager",
       "../../../api:libjingle_peerconnection_api",
+      "../../../api:network_emulation_manager_api",
       "../../../api:scoped_refptr",
       "../../../api:simulated_network_api",
       "../../../api/audio_codecs:builtin_audio_decoder_factory",
@@ -281,11 +283,9 @@ if (rtc_include_tests) {
       "../../../rtc_base:gunit_helpers",
       "../../../rtc_base:logging",
       "../../../rtc_base:rtc_base",
-      "../../../rtc_base:rtc_base_tests_utils",
       "../../../rtc_base:rtc_event",
       "../../../test:fileutils",
       "../../../test:test_support",
-      "../../../test/scenario/network:emulated_network",
       "api:create_peerconnection_quality_test_fixture",
       "api:peer_connection_quality_test_fixture_api",
       "//third_party/abseil-cpp/absl/memory:memory",
