--- a/test/scenario/network/BUILD.gn
+++ b/test/scenario/network/BUILD.gn
@@ -26,12 +26,14 @@ rtc_source_set("emulated_network") {
   ]
   deps = [
     "../:column_printer",
+    "../../../api:network_emulation_manager_api",
     "../../../api:simulated_network_api",
     "../../../api/units:data_rate",
     "../../../api/units:data_size",
     "../../../api/units:time_delta",
     "../../../api/units:timestamp",
     "../../../rtc_base:rtc_base",
+    "../../../rtc_base:rtc_base_tests_utils",
     "../../../rtc_base:rtc_task_queue",
     "../../../rtc_base:safe_minmax",
     "../../../rtc_base/task_utils:repeating_task",
@@ -49,6 +51,7 @@ rtc_source_set("network_emulation_unittest") {
   ]
   deps = [
     ":emulated_network",
+    "../../../api:network_emulation_manager_api",
     "../../../api:simulated_network_api",
     "../../../call:simulated_network",
     "../../../rtc_base:logging",
@@ -64,9 +67,10 @@ rtc_source_set("network_emulation_pc_unittest") {
     "network_emulation_pc_unittest.cc",
   ]
   deps = [
-    ":emulated_network",
     "../../../api:callfactory_api",
+    "../../../api:create_network_emulation_manager",
     "../../../api:libjingle_peerconnection_api",
+    "../../../api:network_emulation_manager_api",
     "../../../api:scoped_refptr",
     "../../../api:simulated_network_api",
     "../../../api/audio_codecs:builtin_audio_decoder_factory",
@@ -83,7 +87,6 @@ rtc_source_set("network_emulation_pc_unittest") {
     "../../../rtc_base:gunit_helpers",
     "../../../rtc_base:logging",
     "../../../rtc_base:rtc_base",
-    "../../../rtc_base:rtc_base_tests_utils",
     "../../../rtc_base:rtc_event",
     "../../../test:test_support",
     "//third_party/abseil-cpp/absl/memory:memory",
