Add Fuzzing support for ParseRtcpPacketSenderSsrc.
This function is called on each incoming RTCP payload.

Bug: webrtc:10395
Change-Id: I164746fe45912cc503565e77046b5d884e0204e6

--- a/test/fuzzers/BUILD.gn
+++ b/test/fuzzers/BUILD.gn
@@ -558,3 +558,13 @@ webrtc_fuzzer_test("url_decode_fuzzer") {
     "../../rtc_base:rtc_base_approved",
   ]
 }
+
+webrtc_fuzzer_test("rtp_rtcp_demuxer_helper_fuzzer") {
+  sources = [
+    "rtp_rtcp_demuxer_helper_fuzzer.cc",
+  ]
+  deps = [
+    "../../call:rtp_receiver",
+  ]
+  seed_corpus = "corpora/rtcp-corpus"
+}
