No-op reordering in configs to prepare for lucicfg
This changes the configs in a way that doesn't change the actual behavior in any way.
It removes some unused fields, and mainly reorders items, in order to reduce the diff in the next CL that migrates to auto-generated lucicfg configs.

Change-Id: Ia8cad37b9ee0a717b8bcd4ce95bdb166d67aa7c8

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -93,7 +93,7 @@ builder_mixins {
 # Buckets
 
 buckets {
-  name: "luci.webrtc.ci"
+  name: "ci"
   acl_sets: "waterfall"
 
   swarming {
@@ -222,7 +222,7 @@ buckets {
 }
 
 buckets {
-  name: "luci.webrtc.cron"
+  name: "cron"
   acl_sets: "waterfall"
 
   swarming {
@@ -263,7 +263,7 @@ buckets {
 }
 
 buckets {
-  name: "luci.webrtc.perf"
+  name: "perf"
   acl_sets: "waterfall"
   acl_sets: "perf"
 
@@ -312,7 +312,7 @@ buckets {
 }
 
 buckets {
-  name: "luci.webrtc.try"
+  name: "try"
   acl_sets: "tryserver"
 
   swarming {
