Let threads opt in to having their stack traces printed
The video decoder thread is the pilot user.

Bug: none
Change-Id: Ie638c619673b5f159d91a32683fd787baf46479a

--- a/rtc_base/system/BUILD.gn
+++ b/rtc_base/system/BUILD.gn
@@ -78,3 +78,16 @@ if (is_mac || is_ios) {
     libs = [ "Foundation.framework" ]
   }
 }
+
+rtc_source_set("thread_registry") {
+  sources = [
+    "thread_registry.h",
+  ]
+  deps = [
+    "..:rtc_base_approved",
+  ]
+  if (is_android) {
+    sources += [ "thread_registry.cc" ]
+    deps += [ "//third_party/abseil-cpp/absl/base:core_headers" ]
+  }
+}
