Revert "Remove dependency on DirectShow baseclasses (streams.h from the winsdk_samples directory)."
This reverts commit 30e60d6fd98388207e6036594597c83a4d44735f.

Reason for revert: Might have broken ASAN

Original change's description:
> Remove dependency on DirectShow baseclasses (streams.h from the winsdk_samples directory).
> 
> This required a fairly extensive overhaul:
> 
> * Removed locks from the implementation.
>   The filter/pin architecture does use multiple threads,
>   but the state is controlled on one and synchronization
>   is done via flags that don't require locking.
>   Note though that the baseclasses used a lot of locking, it's unclear why,
>   but perhaps there are things I'm not aware of. The locking was not done
>   consistently though, which doesn't seem to have been a problem.
> * Change the code to not mix AddRef/Release and use of explicit 'delete'.
> * Removed implementations of interfaces we don't need/use.
> * Similarly some methods now return E_NOTIMPL.
> * Added some utilities to make use of COM interfaces and concepts, easier.
> 
> BUG=webrtc:10374
> TBR=mbonadei@webrtc.org
> 
> Change-Id: Iaedb1157d37ef5d5c75f727dba3d7de75ce22cd8
> Reviewed-on: https://webrtc-review.googlesource.com/c/src/+/125086
> Commit-Queue: Tommi <tommi@webrtc.org>
> Reviewed-by: Christian Fremerey <chfremer@webrtc.org>
> Cr-Commit-Position: refs/heads/master@{#27072}

TBR=mbonadei@webrtc.org,tommi@webrtc.org,chfremer@webrtc.org

Change-Id: Ib75787a70394fd3b82419e373bc8543e449a01b6
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: webrtc:10374

--- a/modules/video_capture/BUILD.gn
+++ b/modules/video_capture/BUILD.gn
@@ -107,6 +107,8 @@ if (!build_with_chromium) {
           "windows/BasePin.cpp",
           "windows/MediaType.cpp",
         ]
+      } else {
+        deps += [ "//third_party/winsdk_samples" ]
       }
     }
 
