Add public API for NetworkEmulationManager
Bug: webrtc:10138
Change-Id: Ib5f8e95761813bd117a5e29adbc6822a5c6c73bd

--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -305,6 +305,31 @@ rtc_source_set("simulated_network_api") {
   ]
 }
 
+rtc_source_set("network_emulation_manager_api") {
+  visibility = [ "*" ]
+  sources = [
+    "test/network_emulation_manager.h",
+  ]
+  deps = [
+    ":simulated_network_api",
+    "../rtc_base:rtc_base",
+  ]
+}
+
+rtc_source_set("create_network_emulation_manager") {
+  visibility = [ "*" ]
+  testonly = true
+  sources = [
+    "test/create_network_emulation_manager.cc",
+    "test/create_network_emulation_manager.h",
+  ]
+  deps = [
+    ":network_emulation_manager_api",
+    "../test/scenario/network:emulated_network",
+    "//third_party/abseil-cpp/absl/memory:memory",
+  ]
+}
+
 rtc_source_set("fec_controller_api") {
   visibility = [ "*" ]
   sources = [
