--- a/test/pc/e2e/BUILD.gn
+++ b/test/pc/e2e/BUILD.gn
@@ -264,7 +264,9 @@ if (rtc_include_tests) {
       ":default_audio_quality_analyzer",
       ":default_video_quality_analyzer",
       "../../../api:callfactory_api",
+      "../../../api:create_network_emulation_manager",
       "../../../api:libjingle_peerconnection_api",
+      "../../../api:network_emulation_manager_api",
       "../../../api:scoped_refptr",
       "../../../api:simulated_network_api",
       "../../../api/audio_codecs:builtin_audio_decoder_factory",
