--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -258,6 +258,7 @@ rtc_source_set("rtc_event") {
       "../../webrtc_overrides/rtc_base/event.h",
     ]
   } else {
+    deps += [ "synchronization:rtc_event_control" ]
     sources = [
       "event.cc",
       "event.h",
