--- a/rtc_base/task_utils/BUILD.gn
+++ b/rtc_base/task_utils/BUILD.gn
@@ -26,6 +26,20 @@ rtc_source_set("repeating_task") {
   ]
 }
 
+rtc_source_set("task_queue_factory_with_fake_time") {
+  testonly = true
+  sources = [
+    "task_queue_factory_with_fake_time.cc",
+    "task_queue_factory_with_fake_time.h",
+  ]
+  deps = [
+    "..:timeutils",
+    "../../api/task_queue",
+    "../../api/units:time_delta",
+    "//third_party/abseil-cpp/absl/memory",
+  ]
+}
+
 rtc_source_set("to_queued_task") {
   sources = [
     "to_queued_task.h",
