Adds RefPtr class for simple use cases of scoped_refptr.
The system for scoped_refptr and RefCountInterface is quite flexible and
supports advanced use cases such as implementing copy on write etc.

This is useful in some cases, but sometimes it's overkill. This CL
introduces the RefPtr class which allows using scoped_refptr with any
preexisting class without further customization.

Bug: webrtc:10365
Change-Id: Ia7f4f670fa19af30d8770705cbe0093d50649952

--- a/rtc_base/memory/BUILD.gn
+++ b/rtc_base/memory/BUILD.gn
@@ -22,6 +22,16 @@ rtc_source_set("aligned_array") {
   ]
 }
 
+rtc_source_set("refptr") {
+  sources = [
+    "refptr.h",
+  ]
+  deps = [
+    "..:refcount",
+    "../../api:scoped_refptr",
+  ]
+}
+
 rtc_source_set("aligned_malloc") {
   sources = [
     "aligned_malloc.cc",
@@ -35,10 +45,12 @@ rtc_source_set("unittests") {
   sources = [
     "aligned_array_unittest.cc",
     "aligned_malloc_unittest.cc",
+    "refptr_unittest.cc",
   ]
   deps = [
     ":aligned_array",
     ":aligned_malloc",
+    ":refptr",
     "../../test:test_support",
   ]
 }
