Make PeerConnectionFactory constructor taking dependency the main constructor
Mark other constructors as depcreated, updated tests that use them.

Bug: None
Change-Id: I19e9fab1ecec3799cc7b8573ab3fd6b258114cce

--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -210,6 +210,7 @@ rtc_static_library("peerconnection") {
     "../media:rtc_media_base",
     "../p2p:rtc_p2p",
     "../rtc_base:checks",
+    "../rtc_base:deprecation",
     "../rtc_base:rtc_base",
     "../rtc_base:rtc_base_approved",
     "../rtc_base/system:rtc_export",
