--- a/video/BUILD.gn
+++ b/video/BUILD.gn
@@ -466,6 +466,7 @@ if (rtc_include_tests) {
       "end_to_end_tests/codec_tests.cc",
       "end_to_end_tests/config_tests.cc",
       "end_to_end_tests/extended_reports_tests.cc",
+      "end_to_end_tests/extended_target_bitrate_tests.cc",
       "end_to_end_tests/fec_tests.cc",
       "end_to_end_tests/frame_encryption_tests.cc",
       "end_to_end_tests/histogram_tests.cc",
