--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -194,22 +194,30 @@ rtc_source_set("bitrate_allocator") {
 }
 
 rtc_static_library("call") {
+  defines = []
+  if (rtc_use_fake_network) {
+    defines += [ "RTC_USE_FAKE_NETWORK" ]
+  }
+
   sources = [
     "call.cc",
     "call_factory.cc",
     "call_factory.h",
-    "degraded_call.cc",
-    "degraded_call.h",
     "flexfec_receive_stream_impl.cc",
     "flexfec_receive_stream_impl.h",
     "receive_time_calculator.cc",
     "receive_time_calculator.h",
   ]
+  if (rtc_use_fake_network) {
+    sources += [
+      "degraded_call.cc",
+      "degraded_call.h",
+    ]
+  }
 
   deps = [
     ":bitrate_allocator",
     ":call_interfaces",
-    ":fake_network",
     ":rtp_interfaces",
     ":rtp_receiver",
     ":rtp_sender",
@@ -256,6 +264,9 @@ rtc_static_library("call") {
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
+  if (rtc_use_fake_network) {
+    deps += [ ":fake_network" ]
+  }
 }
 
 rtc_source_set("video_stream_api") {
