--- a/webrtc.gni
+++ b/webrtc.gni
@@ -187,6 +187,9 @@ declare_args() {
   # (they will still be included in libjingle_peerconnection_so.so and
   # WebRTC.framework)
   rtc_include_builtin_video_codecs = true
+
+  # Use fake network
+  rtc_use_fake_network = true
 }
 
 if (!build_with_mozilla) {
