--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -1297,9 +1297,10 @@ if (rtc_include_tests) {
       ":checks",
       ":rtc_base_approved",
       ":rtc_base_tests_main",
-      ":rtc_task_queue",
       ":sequenced_task_checker",
+      ":task_queue_for_test",
       "../test:test_support",
+      "//third_party/abseil-cpp/absl/memory",
     ]
   }
 
