Do not assume /DUNICODE and /D_UNICODE.
As a library, WebRTC should not assume UNICODE and _UNICODE to be
defined globally.

This CL expicitly selects wide character functions and data structures
in order to build WebRTC with /UUNICODE and /U_UNICODE.

Bug: None
Change-Id: Ie4e2bcb4c5c34aee6f68dc7b5b54b76f088ee3e4

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -311,6 +311,12 @@ config("common_config") {
       # external headers warning suppression (or fix them upstream).
       cflags += [ "/wd4702" ]  # unreachable code
     }
+    if (is_win && is_clang) {
+      cflags += [
+        "-UUNICODE",
+        "-U_UNICODE",
+      ]
+    }
   }
 
   if (current_cpu == "arm64") {
