Changed rtc_base::rtc_json BUILD.gn target to be public.
Bug:webrtc:10477
Change-Id: I36b16c5fa1ad962f0ece3379e251d51df1b313fb

--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -625,6 +625,7 @@ rtc_static_library("rtc_numerics") {
 }
 
 rtc_source_set("rtc_json") {
+  visibility = [ "*" ]
   defines = []
   sources = [
     "strings/json.cc",
