Always depend on NaCl include_dirs config when targeting NaCl.
Some system headers live in a special directory when targeting NaCl.
Before this CL, the WebRTC relies on some "deps" added here and there
in order to propagate the flag
-Inative_client_sdk/src/libraries/third_party/newlib-extras.

This causes brittle builds, for example, when a .cc file which
transitively #includes <arpa/inet.h> is moved to a build targets that
doesn't depend on (transitively or not)
//native_client_sdk/src/libraries/nacl_io, then the build will break with
a similar error:

In file included from ../../third_party/webrtc/rtc_base/fifo_buffer.cc:15:
In file included from ../../third_party/webrtc/rtc_base/thread.h:26:
In file included from ../../third_party/webrtc/rtc_base/message_queue.h:27:
In file included from ../../third_party/webrtc/rtc_base/socket_server.h:15:
In file included from ../../third_party/webrtc/rtc_base/socket_factory.h:14:
In file included from ../../third_party/webrtc/rtc_base/async_socket.h:17:
../../third_party/webrtc/rtc_base/socket.h:17:10: fatal error: 'arpa/inet.h' file not found

Bug: chromium:925028
Change-Id: I5145b80c2ae6969f79fcbfcf93a6b05c8a122746

--- a/webrtc.gni
+++ b/webrtc.gni
@@ -270,6 +270,15 @@ if (is_mac || is_ios) {
   rtc_common_configs += [ "//build/config/compiler:enable_arc" ]
 }
 
+if (is_nacl) {
+  # This is needed in order to lookup some special headers that live in a
+  # special location when targeting NaCl, for example <arpa/inet.h>.
+  # These headers live at:
+  #   src/native_client_sdk/src/libraries/third_party/newlib-extras
+  rtc_common_configs +=
+      [ "//native_client_sdk/src/libraries/nacl_io:nacl_io_include_dirs" ]
+}
+
 # Global public configuration that should be applied to all WebRTC targets. You
 # normally shouldn't need to include this in your target as it's automatically
 # included when using the rtc_* templates. It set the defines, include paths and
