Stop relying on /DINCL_EXTRA_HTON_FUNCTIONS.
Bug: None
Change-Id: I61ca882ad81dd090fd164b0fdfeec64cd088a71d

--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -109,6 +109,7 @@ rtc_source_set("rtc_base_approved") {
     "flags.h",
     "function_view.h",
     "ignore_wundef.h",
+    "internal/byte_order.h",
     "location.cc",
     "location.h",
     "message_buffer_reader.h",
