--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -33,6 +33,7 @@ rtc_source_set("call_interfaces") {
     "..:webrtc_common",
     "../api:fec_controller_api",
     "../api:libjingle_peerconnection_api",
+    "../api:network_predictor_api",
     "../api:rtp_headers",
     "../api:scoped_refptr",
     "../api:transport_api",
@@ -127,6 +128,7 @@ rtc_source_set("rtp_sender") {
     ":rtp_interfaces",
     "..:webrtc_common",
     "../api:fec_controller_api",
+    "../api:network_predictor_api",
     "../api:transport_api",
     "../api/transport:field_trial_based_config",
     "../api/transport:goog_cc",
