--- a/modules/audio_processing/agc2/rnn_vad/BUILD.gn
+++ b/modules/audio_processing/agc2/rnn_vad/BUILD.gn
@@ -14,8 +14,6 @@ rtc_source_set("rnn_vad") {
     "common.h",
     "features_extraction.cc",
     "features_extraction.h",
-    "fft_util.cc",
-    "fft_util.h",
     "lp_residual.cc",
     "lp_residual.h",
     "pitch_info.h",
@@ -39,6 +37,7 @@ rtc_source_set("rnn_vad") {
     "../../../../common_audio/",
     "../../../../rtc_base:checks",
     "../../../../rtc_base:rtc_base_approved",
+    "../../utility:pffft_wrapper",
     "//third_party/rnnoise:kiss_fft",
     "//third_party/rnnoise:rnn_vad",
   ]
@@ -86,7 +85,6 @@ if (rtc_include_tests) {
     testonly = true
     sources = [
       "features_extraction_unittest.cc",
-      "fft_util_unittest.cc",
       "lp_residual_unittest.cc",
       "pitch_search_internal_unittest.cc",
       "pitch_search_unittest.cc",
@@ -107,6 +105,7 @@ if (rtc_include_tests) {
       "../../../../rtc_base:checks",
       "../../../../rtc_base:logging",
       "../../../../test:test_support",
+      "../../utility:pffft_wrapper",
       "//third_party/rnnoise:rnn_vad",
     ]
     data = unittest_resources
