--- a/test/scenario/BUILD.gn
+++ b/test/scenario/BUILD.gn
@@ -79,6 +79,7 @@ if (rtc_include_tests) {
       "../:test_support",
       "../:video_test_common",
       "../../:webrtc_common",
+      "../../api:fec_controller_api",
       "../../api:libjingle_peerconnection_api",
       "../../api:transport_api",
       "../../api/audio_codecs:builtin_audio_decoder_factory",
