Stop implicitly creating transient suppressors in APM
To retain the transient suppression effect, a webrtc::TransientSuppressor
must explicitly be provided to the webrtc::AudioProcessingBuilder.

This is a follow-up to this CL:
https://webrtc-review.googlesource.com/c/src/+/171103

Bug: webrtc:11226, webrtc:11292
Change-Id: I95e0e2ded9c3fb378122d1458e33d6ccaf5328a7

--- a/webrtc.gni
+++ b/webrtc.gni
@@ -387,6 +387,9 @@ all_poison_types = [
 
   # Software video codecs (VP8 and VP9 through libvpx).
   "software_video_codecs",
+
+  # Transient suppression implementation for the audio processing module.
+  "transient_suppression",
 ]
 
 absl_include_config = "//third_party/abseil-cpp:absl_include_config"
