--- a/modules/audio_processing/BUILD.gn
+++ b/modules/audio_processing/BUILD.gn
@@ -46,6 +46,7 @@ rtc_library("api") {
     "../../api/audio:aec3_config",
     "../../api/audio:audio_frame_api",
     "../../api/audio:echo_control",
+    "../../api/audio:transient_suppressor",
     "../../rtc_base:deprecation",
     "../../rtc_base:macromagic",
     "../../rtc_base:rtc_base_approved",
@@ -164,6 +165,7 @@ rtc_library("audio_processing") {
     "../../api/audio:aec3_config",
     "../../api/audio:audio_frame_api",
     "../../api/audio:echo_control",
+    "../../api/audio:transient_suppressor",
     "../../audio/utility:audio_frame_operations",
     "../../common_audio:common_audio_c",
     "../../common_audio/third_party/fft4g",
@@ -186,7 +188,6 @@ rtc_library("audio_processing") {
     "agc2:fixed_digital",
     "agc2:gain_applier",
     "ns",
-    "transient:transient_suppressor",
     "vad",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
