--- a/modules/audio_processing/transient/BUILD.gn
+++ b/modules/audio_processing/transient/BUILD.gn
@@ -8,7 +8,8 @@
 
 import("../../../webrtc.gni")
 
-rtc_library("transient_suppressor") {
+rtc_library("transient_suppressor_impl") {
+  poisonous = [ "transient_suppression" ]
   sources = [
     "common.h",
     "daubechies_8_wavelet_coeffs.h",
@@ -17,8 +18,8 @@ rtc_library("transient_suppressor") {
     "moving_moments.h",
     "transient_detector.cc",
     "transient_detector.h",
-    "transient_suppressor.cc",
-    "transient_suppressor.h",
+    "transient_suppressor_impl.cc",
+    "transient_suppressor_impl.h",
     "windows_private.h",
     "wpd_node.cc",
     "wpd_node.h",
@@ -26,6 +27,7 @@ rtc_library("transient_suppressor") {
     "wpd_tree.h",
   ]
   deps = [
+    "../../../api/audio:transient_suppressor",
     "../../../common_audio:common_audio",
     "../../../common_audio:common_audio_c",
     "../../../common_audio:fir_filter",
@@ -46,7 +48,7 @@ if (rtc_include_tests) {
       "file_utils.h",
     ]
     deps = [
-      ":transient_suppressor",
+      ":transient_suppressor_impl",
       "..:audio_processing",
       "../../../rtc_base/system:file_wrapper",
       "../../../system_wrappers",
@@ -61,7 +63,7 @@ if (rtc_include_tests) {
       "transient_suppression_test.cc",
     ]
     deps = [
-      ":transient_suppressor",
+      ":transient_suppressor_impl",
       "..:audio_processing",
       "../../../common_audio",
       "../../../rtc_base:rtc_base_approved",
@@ -90,7 +92,7 @@ if (rtc_include_tests) {
       "wpd_tree_unittest.cc",
     ]
     deps = [
-      ":transient_suppressor",
+      ":transient_suppressor_impl",
       "../../../rtc_base:stringutils",
       "../../../rtc_base/system:file_wrapper",
       "../../../test:fileutils",
