Cleanup rtp rtcp demuxer helpers
merge template helpers for map and multimap
adjust FindByValue to also works for unordered_map
Replace ContainerHasKey with a linear_search template

Bug: None
Change-Id: I40c2a09aa3fd14d86528ae39d55f25a9f666f39c

--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -125,6 +125,7 @@ rtc_library("rtp_receiver") {
     "../modules/rtp_rtcp:rtp_rtcp_format",
     "../rtc_base:checks",
     "../rtc_base:rtc_base_approved",
+    "//third_party/abseil-cpp/absl/algorithm:container",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
