--- a/modules/audio_processing/BUILD.gn
+++ b/modules/audio_processing/BUILD.gn
@@ -46,6 +46,7 @@ rtc_library("api") {
     "../../api/audio:aec3_config",
     "../../api/audio:audio_frame_api",
     "../../api/audio:echo_control",
+    "../../api/audio:transient_suppressor",
     "../../rtc_base:deprecation",
     "../../rtc_base:macromagic",
     "../../rtc_base:rtc_base_approved",
@@ -164,6 +165,8 @@ rtc_library("audio_processing") {
     "../../api/audio:aec3_config",
     "../../api/audio:audio_frame_api",
     "../../api/audio:echo_control",
+    "../../api/audio:transient_suppressor",
+    "../../api/audio:transient_suppressor_factory",
     "../../audio/utility:audio_frame_operations",
     "../../common_audio:common_audio_c",
     "../../common_audio/third_party/fft4g",
@@ -186,7 +189,6 @@ rtc_library("audio_processing") {
     "agc2:fixed_digital",
     "agc2:gain_applier",
     "ns",
-    "transient:transient_suppressor",
     "vad",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
@@ -422,6 +424,7 @@ if (rtc_include_tests) {
         "../../rtc_base:rtc_task_queue",
         "aec_dump",
         "aec_dump:aec_dump_unittests",
+        "transient:mock_transient_suppressor",
         "//third_party/abseil-cpp/absl/flags:flag",
       ]
       sources += [
