Remove unused deps on modules/audio_processing:audio_processing
Very few modules actually need to depend on the implementation of the audio processing module. Almost all targets should be depending on the api, instead.

Bug: webrtc:11226
Change-Id: If89d6cb73e4fe50de2f75414313b854486798788

--- a/modules/audio_processing/ns/BUILD.gn
+++ b/modules/audio_processing/ns/BUILD.gn
@@ -77,9 +77,9 @@ if (rtc_include_tests) {
 
     deps = [
       ":ns",
+      "..:api",
       "..:apm_logging",
       "..:audio_buffer",
-      "..:audio_processing",
       "..:audio_processing_unittests",
       "..:high_pass_filter",
       "../../../api:array_view",
