--- a/modules/audio_processing/aec3/BUILD.gn
+++ b/modules/audio_processing/aec3/BUILD.gn
@@ -171,9 +171,9 @@ if (rtc_include_tests) {
 
     deps = [
       ":aec3",
+      "..:api",
       "..:apm_logging",
       "..:audio_buffer",
-      "..:audio_processing",
       "..:audio_processing_unittests",
       "..:high_pass_filter",
       "../../../api:array_view",
