Try Node Hash map
Bug: None
Change-Id: I1600cde432b7e1bb7728b66ef3f4f7795a8e33e6

--- a/modules/audio_processing/BUILD.gn
+++ b/modules/audio_processing/BUILD.gn
@@ -300,6 +300,7 @@ rtc_library("apm_logging") {
     "../../common_audio",
     "../../rtc_base:checks",
     "../../rtc_base:rtc_base_approved",
+    "//third_party/abseil-cpp/absl/container:node_hash_map",
   ]
   defines = []
 }
