--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -125,6 +125,7 @@ rtc_library("rtp_receiver") {
     "../modules/rtp_rtcp:rtp_rtcp_format",
     "../rtc_base:checks",
     "../rtc_base:rtc_base_approved",
+    "//third_party/abseil-cpp/absl/container:node_hash_map",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
