APM: Add build flag to build WebRTC without APM
Bug: webrtc:5298
Change-Id: I5c8b5d1f7115e5cce2af4c2b5ff701fa1c54e49e

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -276,6 +276,10 @@ config("common_config") {
     defines += [ "RTC_DISABLE_METRICS" ]
   }
 
+  if (exclude_audio_processing_module) {
+    defines += [ "EXCLUDE_AUDIO_PROCESSING_MODULE=1" ]
+  }
+
   cflags = []
 
   if (build_with_chromium) {
