--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -464,8 +464,8 @@ if (rtc_include_tests) {
       "../call:mock_rtp_interfaces",
       "../call:video_stream_api",
       "../common_video",
-      "../modules/audio_processing",
       "../modules/audio_processing:api",
+      "../modules/audio_processing:audio_processing_builder",
       "../modules/rtp_rtcp:rtp_rtcp_format",
       "../modules/video_coding:video_codec_interface",
       "../modules/video_coding:video_coding_utility",
@@ -567,8 +567,8 @@ if (rtc_include_tests) {
       "../call:call_interfaces",
       "../common_video",
       "../modules/audio_device:mock_audio_device",
-      "../modules/audio_processing",
       "../modules/audio_processing:api",
+      "../modules/audio_processing:audio_processing_builder",
       "../modules/audio_processing:mocks",
       "../modules/rtp_rtcp",
       "../modules/video_coding:simulcast_test_fixture_impl",
