--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -954,8 +954,8 @@ if (is_ios || is_mac) {
         "../media:rtc_media_base",
         "../modules:module_api",
         "../modules/audio_device:audio_device_api",
-        "../modules/audio_processing",
         "../modules/audio_processing:api",
+        "../modules/audio_processing:audio_processing_builder",
         "../modules/video_coding:video_codec_interface",
         "../pc:peerconnection",
         "../rtc_base",
@@ -1222,8 +1222,8 @@ if (is_ios || is_mac) {
           "../media:rtc_media_base",
           "../modules:module_api",
           "../modules/audio_device:audio_device_api",
-          "../modules/audio_processing",
           "../modules/audio_processing:api",
+          "../modules/audio_processing:audio_processing_builder",
           "../modules/video_coding:video_codec_interface",
           "../rtc_base:gunit_helpers",
           "../rtc_base/system:unused",
