--- a/modules/audio_processing/BUILD.gn
+++ b/modules/audio_processing/BUILD.gn
@@ -112,6 +112,21 @@ rtc_library("high_pass_filter") {
   ]
 }
 
+rtc_library("audio_processing_builder") {
+  visibility = [ "*" ]
+  configs += [ ":apm_debug_dump" ]
+  sources = [ "audio_processing_builder_impl.cc" ]
+
+  defines = []
+  deps = [
+    ":api",
+    ":audio_processing",
+    ":config",
+    "../../api/audio:echo_control",
+    "../../rtc_base:refcount",
+  ]
+}
+
 rtc_library("audio_processing") {
   visibility = [ "*" ]
   configs += [ ":apm_debug_dump" ]
@@ -527,6 +542,7 @@ if (rtc_include_tests) {
         ":api",
         ":apm_logging",
         ":audio_processing",
+        ":audio_processing_builder",
         ":audioproc_debug_proto",
         ":audioproc_protobuf_utils",
         ":audioproc_test_utils",
