--- a/test/scenario/BUILD.gn
+++ b/test/scenario/BUILD.gn
@@ -114,7 +114,7 @@ if (rtc_include_tests) {
       "../../modules/audio_device:audio_device_impl",
       "../../modules/audio_device:mock_audio_device",
       "../../modules/audio_mixer:audio_mixer_impl",
-      "../../modules/audio_processing",
+      "../../modules/audio_processing:audio_processing_builder",
       "../../modules/congestion_controller/goog_cc:test_goog_cc_printer",
       "../../modules/rtp_rtcp",
       "../../modules/rtp_rtcp:mock_rtp_rtcp",
