--- a/webrtc.gni
+++ b/webrtc.gni
@@ -96,6 +96,9 @@ declare_args() {
   # should be generated.
   apm_debug_dump = false
 
+  # Selects whether the audio processing module should be excluded.
+  exclude_audio_processing_module = true
+
   # Set this to true to enable BWE test logging.
   rtc_enable_bwe_test_logging = false
 
