Replace all unordered_map and unordered_set with absl version
Bug: None
Change-Id: I472d32ac2116f15018b93c7d94ab099318316436

--- a/logging/BUILD.gn
+++ b/logging/BUILD.gn
@@ -417,6 +417,7 @@ rtc_library("ice_log") {
     "../api:libjingle_peerconnection_api",  # For api/dtls_transport_interface.h
     "../api/rtc_event_log",
     "../rtc_base:rtc_base_approved",
+    "//third_party/abseil-cpp/absl/container:flat_hash_map",
     "//third_party/abseil-cpp/absl/memory",
   ]
 }
