--- a/test/time_controller/BUILD.gn
+++ b/test/time_controller/BUILD.gn
@@ -41,6 +41,7 @@ rtc_library("time_controller") {
     "../../rtc_base/synchronization:yield_policy",
     "../../rtc_base/task_utils:to_queued_task",
     "../../system_wrappers",
+    "//third_party/abseil-cpp/absl/container:flat_hash_set",
     "//third_party/abseil-cpp/absl/strings",
   ]
 }
