--- a/audio/BUILD.gn
+++ b/audio/BUILD.gn
@@ -88,6 +88,7 @@ rtc_library("audio") {
     "../system_wrappers:field_trial",
     "../system_wrappers:metrics",
     "utility:audio_frame_operations",
+    "//third_party/abseil-cpp/absl/container:flat_hash_set",
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
