--- a/test/fuzzers/BUILD.gn
+++ b/test/fuzzers/BUILD.gn
@@ -434,8 +434,8 @@ rtc_library("audio_processing_fuzzer_helper") {
   deps = [
     ":fuzz_data_helper",
     "../../api/audio:audio_frame_api",
-    "../../modules/audio_processing",
     "../../modules/audio_processing:api",
+    "../../modules/audio_processing:audio_processing_builder",
     "../../rtc_base:checks",
     "../../rtc_base:rtc_base_approved",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -449,9 +449,9 @@ webrtc_fuzzer_test("audio_processing_fuzzer") {
     "../../api:scoped_refptr",
     "../../api/audio:aec3_factory",
     "../../api/task_queue:default_task_queue_factory",
-    "../../modules/audio_processing",
     "../../modules/audio_processing:api",
     "../../modules/audio_processing:audio_buffer",
+    "../../modules/audio_processing:audio_processing_builder",
     "../../modules/audio_processing/aec3",
     "../../modules/audio_processing/aec_dump",
     "../../modules/audio_processing/aec_dump:aec_dump_impl",
@@ -468,9 +468,9 @@ webrtc_fuzzer_test("agc_fuzzer") {
   sources = [ "agc_fuzzer.cc" ]
   deps = [
     ":fuzz_data_helper",
-    "../../modules/audio_processing",
     "../../modules/audio_processing:api",
     "../../modules/audio_processing:audio_buffer",
+    "../../modules/audio_processing:audio_processing_builder",
     "../../rtc_base:rtc_base_approved",
     "../../rtc_base:safe_minmax",
   ]
