--- a/modules/audio_processing/aec_dump/BUILD.gn
+++ b/modules/audio_processing/aec_dump/BUILD.gn
@@ -41,6 +41,7 @@ rtc_library("mock_aec_dump_unittests") {
   deps = [
     ":mock_aec_dump",
     "..:api",
+    "..:audioproc_test_utils",
     "../",
     "../../../rtc_base:rtc_base_approved",
     "//testing/gtest",
