APM: Add build flag to allow building WebRTC without APM
This CL adds a build flag to allow building the non-test parts
of WebRTC without the audio processing module.
The CL also ensures that the WebRTC code correctly handles
the case when no APM is available.

Bug: webrtc:5298
Change-Id: I5c8b5d1f7115e5cce2af4c2b5ff701fa1c54e49e

--- a/modules/audio_processing/aec_dump/BUILD.gn
+++ b/modules/audio_processing/aec_dump/BUILD.gn
@@ -28,6 +28,7 @@ rtc_library("mock_aec_dump") {
   ]
 
   deps = [
+    "..:audioproc_test_utils",
     "../",
     "../../../test:test_support",
   ]
@@ -41,6 +42,7 @@ rtc_library("mock_aec_dump_unittests") {
   deps = [
     ":mock_aec_dump",
     "..:api",
+    "..:audioproc_test_utils",
     "../",
     "../../../rtc_base:rtc_base_approved",
     "//testing/gtest",
