APM: Add build flag to allow building WebRTC without APM
This CL adds a build flag to allow building the non-test parts
of WebRTC without the audio processing module.
The CL also ensures that the WebRTC code correctly handles
the case when no APM is available.

Bug: webrtc:5298
Change-Id: I5c8b5d1f7115e5cce2af4c2b5ff701fa1c54e49e

--- a/rtc_tools/BUILD.gn
+++ b/rtc_tools/BUILD.gn
@@ -370,7 +370,7 @@ if (rtc_include_tests) {
     visibility = [ "*" ]
     testonly = true
     sources = [
-      "converter/yuv_to_ivf_converter.cc",
+      "converter/yuv_to_ivf_converter.cc"
     ]
     deps = [
       "../api:create_frame_generator",
