--- a/rtc_tools/BUILD.gn
+++ b/rtc_tools/BUILD.gn
@@ -369,9 +369,7 @@ if (rtc_include_tests) {
   rtc_executable("yuv_to_ivf_converter") {
     visibility = [ "*" ]
     testonly = true
-    sources = [
-      "converter/yuv_to_ivf_converter.cc",
-    ]
+    sources = [ "converter/yuv_to_ivf_converter.cc" ]
     deps = [
       "../api:create_frame_generator",
       "../api:frame_generator_api",
