--- a/BUILD.gn
+++ b/BUILD.gn
@@ -277,6 +277,12 @@ config("common_config") {
     defines += [ "RTC_DISABLE_METRICS" ]
   }
 
+  if (rtc_exclude_audio_processing_module) {
+    defines += [ "WEBRTC_EXCLUDE_AUDIO_PROCESSING_MODULE=1" ]
+  } else {
+    defines += [ "WEBRTC_EXCLUDE_AUDIO_PROCESSING_MODULE=0" ]
+  }
+
   cflags = []
 
   if (build_with_chromium) {
