[Adaptation] Introduce VideoStreamInputState and its Provider.
This CL is part of the Call-Level Adaptation Processing design doc:
https://docs.google.com/document/d/1ZyC26yOCknrrcYa839ZWLxD6o6Gig5A3lVTh4E41074/edit?usp=sharing

The "input state" of a VideoStream, needed for adaptation and
decision-making, are: source resolution and frame rate, codec type and
min pixels per frame (based on encoder scaling settings). These values
are modified on the encoder queue of the VideoStreamEncoder.

But in order to unblock call-level adaptation processing, where
adaptation and decision making happens off the encoder queue, a snapshot
of the input states need to be available at point of processing:
introducing the VideoStreamInputState.

In this CL, the VideoStreamInputStateProvider is added to provide input
state snapshots across threads based on input from VideoStreamEncoder
and VideoStreamEncoderObserver.

The input state's HasInputFrameSizeAndFramesPerSecond() can now be
DCHECKed inside the VideoStreamAdapter in favor of having less
Adaptation::Status codes. Whether input is "sufficient" for adaptation
is now the responsibility of the Processor. (Goal: adapter is purely a
Adaptation generator and apply-er.)

Somewhat tangental, this CL also deletes VideoStreamEncoder-specific
methods from ResourceAdaptationProcessorInterface making them an
implementation detail of ResourceAdaptationProcessor. In a future CL,
the "processor" will be split up into a "processor" part and a "video
stream encoder resource manager" part - more on that later.

Bug: webrtc:11172
Change-Id: Id9b158f569db0140b75360aaf0f7e2e28fb924f4

--- a/call/adaptation/BUILD.gn
+++ b/call/adaptation/BUILD.gn
@@ -16,12 +16,21 @@ rtc_library("resource_adaptation") {
     "resource.h",
     "resource_adaptation_processor_interface.cc",
     "resource_adaptation_processor_interface.h",
+    "resource_consumer.cc",
+    "resource_consumer.h",
+    "resource_consumer_configuration.cc",
+    "resource_consumer_configuration.h",
     "video_source_restrictions.cc",
     "video_source_restrictions.h",
+    "video_stream_input_state.cc",
+    "video_stream_input_state.h",
+    "video_stream_input_state_provider.cc",
+    "video_stream_input_state_provider.h",
   ]
   deps = [
     "../../api:rtp_parameters",
     "../../api/video:video_frame",
+    "../../api/video:video_stream_encoder",
     "../../api/video_codecs:video_codecs_api",
     "../../rtc_base:checks",
     "../../rtc_base:rtc_base_approved",
@@ -51,6 +60,8 @@ if (rtc_include_tests) {
     sources = [
       "test/fake_resource.cc",
       "test/fake_resource.h",
+      "test/fake_resource_consumer_configuration.cc",
+      "test/fake_resource_consumer_configuration.h",
     ]
     deps = [
       ":resource_adaptation",
