WIP FEC refactoring
Change-Id: I9040e5f40ceac9010962ebb9fefac4ecaddd8018

--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -285,6 +285,7 @@ rtc_library("call") {
     "../system_wrappers:field_trial",
     "../system_wrappers:metrics",
     "../video",
+    "//third_party/abseil-cpp/absl/algorithm:container",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
